src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Timeline_to_Purchase__c</fullName>
        <description>What is the prospect&apos;s timeline to purchase?</description>
        <inlineHelpText>What is the prospect&apos;s timeline to purchase?</inlineHelpText>
        <label>Timeline to Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Less than a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topics_Discussed__c</fullName>
        <description>What topics did you discuss with the prospect?</description>
        <inlineHelpText>What topics did you discuss with the prospect?</inlineHelpText>
        <label>Topics Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Design/Theme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Help Driving Traffic to Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments, Shipping, &amp; Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI/Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business growth/scalability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Website Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trial_Expiration_Date__c</fullName>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.ExpirationDate__c  , NULL)</formula>
        <label>zTrial Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.StartDate__c , NULL)</formula>
        <label>zTrial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Store_URL__c</fullName>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.StoreURL__c  , NULL)</formula>
        <label>zTrial Store URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Lead type. No default set.</description>
        <inlineHelpText>Lead type. No default set.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal/BC Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer/Dev Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target (DM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Time_Zone__c</fullName>
        <inlineHelpText>Based on the State populated in the address field &quot;State/Province&quot;</inlineHelpText>
        <label>US Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaiian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_to_Lead_Message__c</fullName>
        <description>Container for web to lead form message from contact</description>
        <inlineHelpText>Stores web to lead form message</inlineHelpText>
        <label>Web to Lead Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gaClientID__c</fullName>
        <label>GA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchCampaign__c</fullName>
        <label>GA FirstTouch Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchChannel__c</fullName>
        <label>GA FirstTouch Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchDate__c</fullName>
        <label>GA First Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gafirstTouchKeyword__c</fullName>
        <label>GA FirstTouch Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchMedium__c</fullName>
        <label>GA FirstTouch Medium</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchSource__c</fullName>
        <label>GA FirstTouch Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchCampaign__c</fullName>
        <label>GA LastTouch Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchChannel__c</fullName>
        <label>GA LastTouch Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchDate__c</fullName>
        <label>GA Last Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>galastTouchKeyword__c</fullName>
        <label>GA LastTouch Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchMedium__c</fullName>
        <label>GA LastTouch Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchSource__c</fullName>
        <label>GA LastTouch Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gatotalTouchCount__c</fullName>
        <label>GA TotalTouch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hoot2sf_FacebookId__c</fullName>
        <label>Facebook Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoot2sf_FacebookUsername__c</fullName>
        <label>Facebook Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoot2sf_TwitterId__c</fullName>
        <label>Twitter Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoot2sf_TwitterUsername__c</fullName>
        <label>Twitter Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Lead&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Distribution action</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Is_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_archive_date__c</fullName>
        <label>Last archive date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Last distributed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Last reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Source_queue__c</fullName>
        <label>Source queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items</relationshipLabel>
        <relationshipName>Contact_Score_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  It should be incremented each time the Lead is dialed.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Lead.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rvpe__DateAssignedToPartner__c</fullName>
        <label>Date Assigned to Partner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rvpe__DealRegistrationDenied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Registration Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rvpe__DealRegistrationStatus__c</fullName>
        <formula>IF(rvpe__IsDealRegistration__c, IF(IsConverted, &quot;Approved&quot;, IF(rvpe__DealRegistrationDenied__c, &quot;Denied&quot;, &quot;Pending&quot;)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Registration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rvpe__IsDealRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rvpe__NotifyRVMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify RV Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rvpe__PartnerLastModifiedDate__c</fullName>
        <label>Partner Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rvpe__PartnerLeadAcceptance__c</fullName>
        <label>Partner Lead Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rvpe__RVAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RV Account</label>
        <referenceTo>rvpe__RVAccount__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rvpe__RVMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RV Member</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.rvpe__RVAccount__c</field>
                <operation>equals</operation>
                <valueField>rvpe__RVMember__c.rvpe__RVAccount__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.rvpe__RVAccount__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>rvpe__RVMember__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>totango__TotangoActive_users_last_14_days__c</fullName>
        <description>The number of unique active users that accessed the system in the last 14 days.</description>
        <label>Totango Active users (last 14 days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoEngagementChange__c</fullName>
        <label>Totango Engagement Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoEngagement__c</fullName>
        <label>Totango Engagement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoInsights__c</fullName>
        <label>Totango Insights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__TotangoOnlineStatusImage__c</fullName>
        <formula>IF( CONTAINS( totango__Totango_isOnline__c , &quot;totango&quot;), IMAGE( totango__Totango_isOnline__c, &quot;N/A&quot;) ,  IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totango Online Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Account_Health_Icon__c</fullName>
        <formula>IMAGE( CASE(  totango__Totango_Account_Health__c , &quot;Good&quot;, &apos;https://app.totango.com/images/health/circle-green.png&apos;, &quot;Average&quot;, &apos;https://app.totango.com/images/health/circle-yellow.png&apos;, &quot;Poor&quot;, &apos;https://app.totango.com/images/health/circle-red.png&apos;,  &apos;&apos;), &quot;&quot;,15,15)</formula>
        <label>Totango Account Health Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Account_Health_Reason__c</fullName>
        <label>Totango Account Health Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Account_Health__c</fullName>
        <label>Totango Account Health</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Health_Profile_Name__c</fullName>
        <label>Totango_Health_Profile_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Insights__c</fullName>
        <label>Totango Insights DEPRECATED</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Last_Update__c</fullName>
        <description>Last update timestamp of totango api</description>
        <label>Totango Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>totango__Totango_License_Utilization__c</fullName>
        <label>Totango_License_Utilization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Online_Status__c</fullName>
        <formula>IF( CONTAINS( totango__Totango_isOnline__c , &quot;totango&quot;), IMAGE( totango__Totango_isOnline__c, &quot;N/A&quot;) , IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totango_Online_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Overall_Time_Spent__c</fullName>
        <label>Totango Overall Time Spent</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_URL__c</fullName>
        <description>URL to Totango Platform</description>
        <label>Totango URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Usage_Frequency__c</fullName>
        <label>Totango Usage Frequency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_isOnline__c</fullName>
        <defaultValue>&quot;https://app.totango.com/images/emptyPixel.png&quot;</defaultValue>
        <description>Indicates whether customer is currently using your service</description>
        <label>Totango Online Status</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zClient_s_Design_Budget__c</fullName>
        <description>design referral program field</description>
        <inlineHelpText>In order to refer a client to one of our Design Partners, the client&apos;s design budget must be entered in this field.  If they do not have a budget but are still qualified for referral, explain why in the Referral Notes field</inlineHelpText>
        <label>zClient&apos;s Design Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>Acquisition_Miderprise</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Projected_Annual_Revenue__c</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>mkto2__Lead_Score__c</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <filterScope>Queue</filterScope>
        <label>Enterprise Lead Queue</label>
        <queue>Acquisition_Miderprise</queue>
        <sharedTo>
            <role>Enterprise_LDR</role>
            <roleAndSubordinatesInternal>Outbound_II_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_of_Sales</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bad_Contact_Info_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Bad Contact Info Lead Queue</label>
        <queue>Bad_Contact_Info_Lead_Queue</queue>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chat_Queue_Sales</fullName>
        <filterScope>Queue</filterScope>
        <label>Chat Queue : Sales</label>
        <queue>Chat_Queue_Sales</queue>
        <sharedTo>
            <role>Direct_LDR_Inbound</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contact_form_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CLEAN_STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>WebToLead</value>
        </filters>
        <label>Contact form leads</label>
        <sharedTo>
            <role>Direct_LDR_Inbound</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_No_Contact_Made_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Leads - No Contact Made Queue</label>
        <queue>Leads_No_Contact_Made_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Promotional_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Promotional Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Acquisition_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Direct_LDR_Inbound</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Enterprise_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Enterprise_Sales</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Outbound_II_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Outbound_Sales_I</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Partner_Leader</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>